--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -3,7 +3,7 @@
   "rewrites": [
     {
       "source": "/api/:path*",
-      "destination": "https://ecommerce-webiste-939r.vercel.app/"
+      "destination":'https://kuhuecom.vercel.app/',
     }
   ]
 }
