--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "npm run generate-html && vite build",
     "lint": "eslint .",
-    "generate-html": "mkdir -p dist && index.html dist/",
+    "generate-html": "mkdir -p dist && copy index.html dist/",
     "preview": "vite preview"
   },
   "dependencies": {
