--- a/frontend/src/.env
+++ b/frontend/src/.env
@@ -1,3 +1,3 @@
 #VITE_BACKEND_URL = 'http://localhost:4000'
-VITE_BACKEND_URL ='https://ecommerce-webiste-939r.vercel.app/' 
+VITE_BACKEND_URL ='https://kuhuecom.vercel.app/' 
 # NODE_ENV=production
