--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "npm run generate-html && vite build",
+    "build": "npm run generate-html",
     "lint": "eslint .",
     "generate-html": "mkdir -p dist && index.html dist/",
     "preview": "vite preview"
