--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -3,7 +3,7 @@
   "rewrites": [
     {
       "source": "/api/:path*",
-      "destination": "http://localhost:4000"
+      "destination": "https://kuhuecom.vercel.app/"
     }
   ]
 }
