--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -3,7 +3,7 @@
   "rewrites": [
     {
       "source": "/api/:path*",
-      "destination": "https://kuhuecom.vercel.app/"
+      "destination": "https://kuhuecom.onrender.com"
     }
   ]
 }
