--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.7.9",
     "cors": "^2.8.5",
+    "firebase": "^11.3.0",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
     "react-refresh": "^0.14.2",
